--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "landing-td",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "vue": "^3.2.13"
-  },
-  "devDependencies": {
-    "@vue/cli-service": "~5.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+	"name": "landing-td",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite --host --config ./dev.js --port 12345",
+		"build": "vite build   --config ./build.js",
+		"preview": "vite preview",
+		"minify": "set TYPE_ENV =* && node minify.js"
+	},
+	"dependencies": {
+		"vue": "^3.2.25"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^2.3.3",
+		"vite": "^2.9.9"
+	}
 }
