--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"minify": "set TYPE_ENV =* && node minify.js"
 	},
 	"dependencies": {
+		"unplugin-vue-components": "^0.19.6",
 		"vue": "^3.2.25"
 	},
 	"devDependencies": {
